GNOME Bugzilla – Bug 693030
Don't ask Xlib to skip ARGB visuals
Last modified: 2013-02-05 21:46:57 UTC
Fixes a crash with backtrace: (gdb) bt at gdkdisplay-x11.c:928 at gdkeventtranslator.c:51 at gdkeventsource.c:354 rtld_fini=<optimized out>, stack_end=0x7fff10a3a108) at libc-start.c:225 The window (0x4400021) is not one created by epiphany / the UI layer of WebKit2 (the XID range is different), therefore I assume it is created by WebCore::GLXSurface(), which explains why it gets an ARGB visual even if libX11 reports none.
Created attachment 235026 [details] [review] Don't ask Xlib to skip ARGB visuals WebKit uses GLX windows internally, which will have alpha. If any of those windows receives an event, Gtk will attempt to create a foreign GdkWindow wrapping them, and will crash because XGetWindowAttributes will return a NULL visual.
Review of attachment 235026 [details] [review]: OK. I did a quick grep in chrome/firefox and I don't see them doing this anymore, so I guess it's not even useful anymore.
Attachment 235026 [details] pushed as 8b63fec - Don't ask Xlib to skip ARGB visuals