Don't ask Xlib to skip ARGB visuals

WebKit uses GLX windows internally, which will have alpha. If any
of those windows receives an event, Gtk will attempt to create a
foreign GdkWindow wrapping them, and will crash because XGetWindowAttributes
will return a NULL visual.

https://bugzilla.gnome.org/show_bug.cgi?id=693030